2010-04-26  Zoltan Herczeg  <zherczeg@webkit.org>

Reviewed by Dirk Schulze.

        Call setStrokeStyle in applyStrokeStyleToContext
        https://bugs.webkit.org/show_bug.cgi?id=37849

        Not all platforms set the stroke style to solid if they
        get an empty line dash array. Some just ignore the operation.

        * rendering/SVGRenderSupport.cpp:
        (WebCore::applyStrokeStyleToContext):

Canonical link: https://commits.webkit.org/49523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58243 268f45cc-cd09-0410-ab3c-d52691b4dbfc