WebCore/rendering/SVGRenderSupport.cpp
@@ -399,7 +399,10 @@ void applyStrokeStyleToContext(GraphicsContext* context, const RenderStyle* styl
 
     const DashArray& dashes = dashArrayFromRenderingStyle(object->style(), object->document()->documentElement()->renderStyle());
     float dashOffset = SVGRenderStyle::cssPrimitiveToLength(object, style->svgStyle()->strokeDashOffset(), 0.0f);
-    context->setLineDash(dashes, dashOffset);
+    if (dashes.isEmpty())
+        context->setStrokeStyle(SolidStroke);
+    else
+        context->setLineDash(dashes, dashOffset);
 }
 
 const RenderObject* findTextRootObject(const RenderObject* start)
